# mySpotifyBackend

./: .envrc  .gitignore  README.md  flake.nix  main_asgi.py  olderFlake.nix  pyproject.toml  requirments.txt
mySpotifyBackend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
older/: older.py
src/myspotifybackend/: __init__.py  main.py
