[project]
name = "mySpotifyBackend"
requires-python = ">=3.11"
version = "0.0.1"
dependencies = [
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "deprecated==1.2.15",
    "falcon==4.0.2",
    "falcon-limiter==1.0.1",
    "h11==0.14.0",
    "idna==3.10",
    "limits==3.14.1",
    "packaging==24.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "wrapt==1.17.0",
]

[tool.uv]
package = false
