[project]
name = "mySpotifyBackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sebgabones", email = "133339614+Sebagabones@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "deprecated==1.2.15",
    "falcon==4.0.2",
    "falcon-limiter==1.0.1",
    "h11==0.14.0",
    "idna==3.10",
    "limits==3.14.1",
    "packaging==24.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "wrapt==1.17.0",
]

[tool.uv]
package = true

[project.scripts]
mySpotifyBackend = "myspotifybackend:main"


[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
